--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       color: #fff;
     }
 
-    /* ===== CLASS .hidden: menyembunyikan elemen (digunakan untuk navigasi Data/Grafik) ===== */
+    /* ===== CLASS .hidden: menyembunyikan elemen (digunakan untuk navigasi Tabel/Grafik) ===== */
     .hidden {
       display: none;
     }
@@ -198,7 +198,7 @@
   <!-- ===== MENU NAVIGASI ===== -->
   <!-- Tombol navigasi untuk menampilkan tabel atau grafik -->
   <nav>
-    <a onclick="showSection('dataSection')">Data</a>
+    <a onclick="showSection('dataSection')">Tabel</a>
     <a onclick="showSection('grafikSection')">Grafik</a>
   </nav>
 
@@ -307,3 +307,4 @@
   </script>
 </body>
 </html>
+
