--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <!-- ===== MENU NAVIGASI ===== -->
   <nav>
     <!-- Tombol untuk menampilkan tabel atau grafik -->
-    <a onclick="showSection('dataSection')">Data</a>
+    <a onclick="showSection('dataSection')">Tabel</a>
     <a onclick="showSection('grafikSection')">Grafik</a>
   </nav>
 
@@ -302,3 +302,4 @@
   </script>
 </body>
 </html>
+
